# embedded_dart

./: .gitignore  README.md  pubspec.yaml
EmbeddedDart/: CMakeLists.txt  main.cpp
